CAUSEWAY-2297: factors out _LoggingJavaSerializer for debugging use (Wicket Viewer)